--- a/index.html
+++ b/index.html
@@ -50,13 +50,12 @@
     </div>
   </main>
 
-
-
-
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.frontendmentor.io/profile/Sylva2002">Christel SNVO</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://www.frontendmentor.io/profile/Sylva2002">Christel SNVO</a>.
+    </div>
+  </footer>
 </body>
 </html>
